--- a/main-wiki3-frontend/src/App.css
+++ b/main-wiki3-frontend/src/App.css
@@ -3,15 +3,36 @@
     padding: 0;
     box-sizing: border-box;
   }
+
+  [data-reactroot] {
+    height: 100% !important; 
+  }
+
+  div#root {
+    height: 100%;
+  }
+
+  html {
+    height: 100%;
+  }
   
   body {
     font-family: sans-serif;
+    height: 100%;
   }
   
   header {
     height: 58px;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.07), 0 1px 2px 0 rgba(0, 0, 0, 0.05);
     color: #212529;
+  }
+
+  .full-height {
+    height: 100%;
+  }
+
+  .full-min-height {
+    min-height: 100%;
   }
   
   .nav-area {
@@ -29,9 +50,15 @@
     color: inherit;
     margin-right: 20px;
   }
+
+  .left-sidebar {
+    background-color: #ccc;
+    min-height: 100%;
+    padding: 0;
+  }
   
   .menus {
-    display: flex;
+    padding: 0;
     list-style: none;
   }
   
@@ -80,7 +107,8 @@
   .dropdown {
     position: absolute;
     right: 0;
-    left: auto;
+    left: 100%;
+    top: 0;
     box-shadow: 0 10px 15px -3px rgba(46, 41, 51, 0.08),
       0 4px 6px -2px rgba(71, 63, 79, 0.16);
     font-size: 0.875rem;
@@ -88,7 +116,7 @@
     min-width: 10rem;
     padding: 0.5rem 0;
     list-style: none;
-    background-color: #fff;
+    background-color: #999;
     border-radius: 0.5rem;
     display: none;
   }
