--- a/main-wiki3-frontend/src/App.css
+++ b/main-wiki3-frontend/src/App.css
@@ -141,10 +141,10 @@ header {
 }
 
 .files li {
-  background-color: #ccc;
   padding: 25px;
   border-radius: 25px;
   margin-bottom: 25px;
+  border: 2px solid #555;
 }
 
 .image-files {
@@ -153,12 +153,22 @@ header {
 }
 
 .image-files li {
-  background-color: #ccc;
   padding: 25px;
   border-radius: 25px;
   margin-bottom: 25px;
+  border: 2px solid #555;
 }
 
 .image-files li img {
   max-width: 100%;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+.files ul li {
+  margin-bottom: 0;
+  padding: 0;
+  border: none;
 }
