--- a/main-wiki3-frontend/src/App.css
+++ b/main-wiki3-frontend/src/App.css
@@ -52,9 +52,10 @@ header {
 }
 
 .left-sidebar {
-  background-color: #ccc;
+  background-color: #0d6efd;
   min-height: 100%;
   padding: 0;
+  color: white;
 }
 
 .menus {
@@ -91,7 +92,7 @@ header {
 
 .menu-items a:hover,
 .menu-items button:hover {
-  background-color: #f2f2f2;
+  background-color: #5294f7;
 }
 
 .arrow::after {
@@ -116,7 +117,7 @@ header {
   min-width: 10rem;
   padding: 0.5rem 0;
   list-style: none;
-  background-color: #999;
+  background-color: #0041a3;
   border-radius: 0.5rem;
   display: none;
 }
