Update README, change name of the app and fix errors

--- a/markdown-wiki2-frontend/src/App.css
+++ b/markdown-wiki2-frontend/src/App.css
@@ -183,3 +183,11 @@ ul {
 .edit-btn {
   margin-right: 15px;
 }
+
+.delete-btn {
+  margin-right: 15px;
+}
+
+.append-btn {
+  margin-right: 15px;
+}
