Fix formatting error on ordered lists

--- a/markdown-wiki2-frontend/src/App.css
+++ b/markdown-wiki2-frontend/src/App.css
@@ -175,6 +175,12 @@ ul {
   border: none;
 }
 
+.files ol li {
+  margin-bottom: 0;
+  padding: 0;
+  border: none;
+}
+
 .brand {
   padding-top: 15px;
   padding-left: 15px;
