Add download button.

--- a/markdown-wiki2-frontend/src/App.css
+++ b/markdown-wiki2-frontend/src/App.css
@@ -187,19 +187,23 @@ ul {
 }
 
 .edit-btn {
-  margin-right: 15px;
+  margin: 5px;
 }
 
 .delete-btn {
-  margin-right: 15px;
+  margin: 5px;
 }
 
 .append-btn {
-  margin-right: 15px;
+  margin: 5px;
 }
 
 .pin-btn {
-  margin-right: 15px;
+  margin: 5px;
+}
+
+.download-btn {
+  margin: 5px;
 }
 
 .swal-button--confirm {
