--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -267,3 +267,15 @@ ul {
 	color: white;
 	background-color: grey;
 }
+
+/* Login */
+
+.login-box {
+  padding: 25px;
+  background-color: #ccc;
+  border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
