--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -279,3 +279,18 @@ ul {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.form-check-input {
+  width: 40px;
+  height: 40px;
+}
+
+.bg-grey {
+  background-color: #ccc;
+  border: none;
+}
+
+.upload-bookmarks-control {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
