--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -214,20 +214,6 @@ ul {
   margin: 5px;
 }
 
-.btn-upload-bookmarks {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.upload-bookmarks {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  background-color: #ccc;
-  border-radius: 10px;
-  padding: 25px;
-  width: 400px;
-}
-
 .swal-button--confirm {
   background-color: #0B5ED7 !important;
 }
@@ -268,6 +254,51 @@ ul {
 	background-color: grey;
 }
 
+/* Bookmarks */
+.add-bookmark-folder {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  background-color: #ccc;
+  border-radius: 10px;
+  padding: 25px;
+}
+
+.remove-bookmark-dups {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  background-color: #ccc;
+  border-radius: 10px;
+  padding: 25px;
+}
+
+.btn-upload-bookmarks {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.upload-bookmarks {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  background-color: #ccc;
+  border-radius: 10px;
+  padding: 25px;
+}
+
+.btn-add-bookmark-folder {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.btn-remove-bookmark-dups {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.btn-delete-all-bookmarks {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 /* Login */
 
 .login-box {
@@ -295,35 +326,3 @@ ul {
   margin-bottom: 5px;
 }
 
-.add-bookmark-folder {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  background-color: #ccc;
-  border-radius: 10px;
-  padding: 25px;
-  width: 400px;
-}
-
-.remove-bookmark-dups {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  background-color: #ccc;
-  border-radius: 10px;
-  padding: 25px;
-  width: 400px;
-}
-
-.btn-add-bookmark-folder {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.btn-remove-bookmark-dups {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.btn-delete-all-bookmarks {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
