Fix error where page scrolls to top when editing files.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -335,3 +335,11 @@ header {
   margin-bottom: 5px;
 }
 
+body.modal-open {
+  position: inherit;
+  overflow: visible;
+}
+
+body.modal-open .modal {
+  overflow: hidden;
+}
