Fix formatting in text files.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -166,6 +166,10 @@ header {
   max-width: 100%;
 }
 
+.file-content {
+  white-space: pre-wrap;
+}
+
 .file-content ul {
   list-style-type: disc;
 }
